<resources>
    <string name="app_name">ParkyPark</string>
    <string name="find_a_parking_for_my">Find a parking for my</string>
    <string name="enter_your_mobile_number_to_login_registration">Enter your mobile number to Login / Registration</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="park_now">Park now</string>
    <string name="reservation">Reservation</string>
    <string name="reserve_at">Reserve at</string>
    <string name="vehicle_plate_no">Vehicle Plate No</string>
    <string name="add_new_vehicle">Add vehicle</string>
    <string name="find_parking">Find Parking</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="vehicle_label">Vehicle %1$d</string>
    <string name="vehicles_not_available">Vehicles not available</string>
    <string name="space">Space</string>
    <string name="floor">Floor</string>
    <string name="check">check</string>
    <string name="coupon">coupon</string>
    <string name="apply">Apply</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_book">Are you sure you want to book ?</string>
    <string name="after_booking_confirmation_label">Your booking is confirmed. Please go to the parking lot and then scan the QR code to park your vehicle.</string>
    <string name="scan_and_park"><![CDATA[Scan & Park]]></string>
    <string name="finding_the_parking_space">Finding the parking space</string>
    <string name="location_permission">Location permission</string>
    <string name="location_permission_explanation">We need your location access to assign you to the closest parking lot.</string>
    <string name="ok">Ok</string>
    <string name="permission_status_granted">permission_granted</string>
    <string name="permission_status_denied">permission_denied</string>
    <string name="permission_status_blocked">permission_blocked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_hour_off">First Hour %1$d \%% off</string>
    <string name="remaining_hour_off">Remaining Hour %1$d \%% Off</string>
    <string name="no_coupons_available_for_you_at_this_time">No coupons available for you at this time</string>
    <string name="verify">verify</string>
    <string name="coupon_code">Coupon code</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="remove_coupon">Remove Coupon</string>
    <string name="applied">Applied</string>
    <string name="coupon_prefix">Coupon - %1$s</string>
    <string name="selecte_a_vehicle">Select a vehicle need to be parked</string>
    <string name="internet_required">Please check your internet connection</string>
    <string name="select_a_vehicle_type">Select a vehicle type</string>
    <string name="reservation_not_available">Reservations are not currently available.</string>
    <string name="enter_a_valid_plate_number">Enter a valid vehicle number</string>
    <string name="first_hour_price_label">First Hour : %1$.2f \u20B9</string>
    <string name="remaining_hour_price_label">Remaining Hour : %1$.2f \u20B9</string>
    <string name="allotted_parking_lot">Allotted parking lot</string>
    <string name="parking_lot_label">Parking Lot %1$d</string>
    <string name="distance_label">Distance : %1$.2f Km</string>
    <string name="status">Status : </string>
    <string name="active">Active</string>
    <string name="payment_status">Payment status : %1$s</string>
    <string name="pickup">pickup</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="booking_history">Bookings</string>
    <string name="floor_and_space">Floor %1$d Space %2$d</string>
    <string name="billing_in_time_label">In Time : %1$s</string>
    <string name="billing_out_time_label">Out Time : %1$s</string>
    <string name="currently_no_bookings_available">Currently no bookings Available.</string>
    <string name="confirmed">Confirmed</string>
    <string name="canceled">Canceled</string>
    <string name="vehicleTypeAll">All</string>
    <string name="pending">Pending</string>
    <string name="paid">paid</string>
    <string name="first_hour_payment_label">First hour \t\t\t: %1$.2f \u20B9</string>
    <string name="remaining_hour_payment_label">Remaining hour \t\t\t: %1$.2f \u20B9</string>
    <string name="first_hour_discount_label">First hour discount \t\t\t: %1$.2f \u20B9</string>
    <string name="remaining_hour_discount_label">Remaining hour discount \t\t\t: %1$.2f \u20B9</string>
    <string name="cancellation_fee_label">Cancellation fee \t\t\t: %1$.2f \u20B9</string>
    <string name="reservation_fee_label">Reservation fee \t\t\t: %1$.2f \u20B9</string>
    <string name="total_fee_label">Total \t\t\t: %1$.2f \u20B9</string>
    <string name="pay_pick_up"><![CDATA[Pay & Pick up]]></string>
    <string name="after_pickup_message">Your vehicle arrived at the front gate. Please pick up. (If you already picked your vehicle neglect this message.)</string>
    <string name="completed">Completed</string>
    <string name="summary">Summary</string>
    <string name="successfully_canceled">Successfully canceled</string>
    <string name="cancellation_failed">Cancellation failed</string>
    <string name="parked_successfully">Parked successfully</string>
    <string name="parking_failed">Parking failed</string>
    <string name="enter_valid_coupon_code">Enter valid coupon code</string>
    <string name="vehicleAlreadyRegistered">Vehicle already registered</string>
    <string name="vehicleRegisteredSuccessfully">Vehicle registered Successfully</string>
</resources>