<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.allottedParkingDetails.AllottedParkingDetailFragment">

    <TextView
        android:id="@+id/tvParkingTypeLabel"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/park_now" />

    <include
        android:id="@+id/layoutVehicleType"
        layout="@layout/list_item_vehicle_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParkingTypeLabel" />

    <TextView
        android:id="@+id/tvAllottedParkingLotLabel"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutVehicleType"
        android:text="@string/allotted_parking_lot" />

    <include
        android:id="@+id/layoutParkingLotDetails"
        layout="@layout/list_item_parking_lot_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAllottedParkingLotLabel" />

    <include
        android:id="@+id/layoutCoupon"
        layout="@layout/list_item_applied_coupon"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutParkingLotDetails" />

    <TextView
        android:id="@+id/tvConfirmationLabel"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCoupon"
        android:text="@string/are_you_sure_you_want_to_book" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmBooking"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
   app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmationLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@+id/btnConfirmBooking"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmationLabel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupConfirmBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="tvConfirmationLabel, btnConfirmBooking, btnCancel"
        />


    <TextView
        android:id="@+id/tvAfterConfirmationInstructions"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/after_booking_confirmation_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmBooking" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnScanAndPark"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scan_and_park"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAfterConfirmationInstructions" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupScanAndPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="tvAfterConfirmationInstructions, btnScanAndPark"
        />

</androidx.constraintlayout.widget.ConstraintLayout>