<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.getParkingDetails.GetParkingDetailsFragment">

    <TextView
        android:id="@+id/tvFindParkingLabel"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/find_a_parking_for_my"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVehicleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFindParkingLabel"
        tools:listitem="@layout/list_item_vehicle_type" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnToggleBookingType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:checkedButton="@id/btnParkNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvVehicleType"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnParkNow"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/park_now"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReservation"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reservation"
            android:textAllCaps="false" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <include
        android:id="@+id/layoutCoupon"
        layout="@layout/list_item_applied_coupon"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnToggleBookingType"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCoupon"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/layoutCoupon"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/add_coupon"
        android:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilVehiclePlateNo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/vehicle_plate_no"
        app:layout_constraintEnd_toStartOf="@+id/btnAddNewVehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddCoupon">

        <EditText
            android:id="@+id/etVehiclePlateNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLength="10"
            android:inputType="textCapCharacters"
            tools:text="Tn882882" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVehicleList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btnFindParking"
        app:layout_constraintTop_toBottomOf="@id/tilVehiclePlateNo"
        tools:itemCount="3"
        tools:listitem="@layout/list_item_vehicle_detail" />

    <TextView
        android:id="@+id/tvEmptyVehicleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicles_not_available"
        app:layout_constraintBottom_toBottomOf="@+id/rvVehicleList"
        app:layout_constraintEnd_toEndOf="@+id/rvVehicleList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvVehicleList" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddNewVehicle"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_vehicle"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/tilVehiclePlateNo"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@+id/tilVehiclePlateNo" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindParking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/find_parking"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/clSecondPhaseViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="btnToggleBookingType, btnAddCoupon, tilVehiclePlateNo, rvVehicleList, btnAddNewVehicle, btnFindParking, tvEmptyVehicleLabel"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
