<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardElevation="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/tvVehiclePlateNo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/layoutVehicleType"
            app:layout_constraintEnd_toStartOf="@+id/guideCenter"
            app:layout_constraintStart_toEndOf="@+id/layoutVehicleType"
            app:layout_constraintTop_toTopOf="@+id/layoutVehicleType"
            tools:text="TNJDI90" />

        <include
            android:id="@+id/layoutVehicleType"
            layout="@layout/list_item_vehicle_type"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:id="@+id/tvInTime"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnPickUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvParkingLot"
            tools:text="@string/billing_in_time_label" />

        <TextView
            android:id="@+id/tvParkingStatus"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/active"
            tools:textColor="@color/green"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPaymentStatus"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/payment_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/tvParkingStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvParkingStatus"
            />


        <TextView
            android:id="@+id/tvParkingLot"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:layout_marginTop="8dp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/guideCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutVehicleType"
            tools:text="Parking Lot 1" />


        <TextView
            android:id="@+id/tvParkingFloorAndSpace"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideCenter"
            app:layout_constraintTop_toBottomOf="@+id/layoutVehicleType"
            tools:text="@string/floor_and_space" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>