<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.coupon.CouponFragment"
  >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCouponCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/coupon_code"
        app:layout_constraintEnd_toStartOf="@+id/btnVerifyCoupon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etCouponCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLength="10"
            android:inputType="textCapCharacters"
            tools:text="DSKFLA" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerifyCoupon"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/tilCouponCode"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@+id/tilCouponCode" />

    <TextView
        android:id="@+id/tvCouponsErrorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_coupons_available_for_you_at_this_time"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tilCouponCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAvailableCoupons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:minHeight="300dp"
        android:maxHeight="300dp"
        tools:listitem="@layout/list_item_coupon"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCouponsErrorLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>
