<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/tvParkingFloorId"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBottom_toTopOf="@+id/tvParkingFloorLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvParkingSpaceId"
            app:layout_constraintStart_toStartOf="@+id/guideCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="09" />

        <TextView
            android:id="@+id/tvParkingFloorLabel"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvParkingFloorId"
            app:layout_constraintStart_toStartOf="@+id/tvParkingFloorId"
            app:layout_constraintTop_toBottomOf="@id/tvParkingFloorId"
            android:text="@string/floor" />

        <TextView
            android:id="@+id/tvParkingSpaceId"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvParkingSpaceLabel"
            app:layout_constraintStart_toEndOf="@id/tvParkingFloorId"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="09" />

        <TextView
            android:id="@+id/tvParkingSpaceLabel"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvParkingSpaceId"
            app:layout_constraintStart_toStartOf="@+id/tvParkingSpaceId"
            app:layout_constraintTop_toBottomOf="@id/tvParkingSpaceId"
            android:text="@string/space" />

        <TextView
            android:id="@+id/tvParkingLotAddress"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="5sp"
            android:maxLines="3"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@id/tvDistance"
            app:layout_constraintEnd_toStartOf="@+id/guideCenter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
            tools:text="parking lot 1, \n123 ab, street 1, \n city -123345" />

        <TextView
            android:id="@+id/tvDistance"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvParkingLotAddress"
            app:layout_constraintStart_toStartOf="@+id/tvParkingLotAddress"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/guideCenter"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>